[gd_scene load_steps=13 format=3 uid="uid://3xmulw5ylhli"]

[ext_resource type="Script" path="res://intro_to_balança.gd" id="1_v3cna"]
[ext_resource type="Texture2D" uid="uid://cimt8yj7oljd3" path="res://balanca_jogo/feira_not_blurry.png" id="2_8gx7a"]
[ext_resource type="Texture2D" uid="uid://cj443a6ktxsb8" path="res://balanca_jogo/blurry_feira.png" id="3_vqf2s"]
[ext_resource type="Texture2D" uid="uid://bu5xdppofr70q" path="res://images/wizard.png" id="4_qpbvx"]
[ext_resource type="AudioStream" uid="uid://brryrimjhrktb" path="res://balanca_jogo/sounds/feira_sounds.mp3" id="5_sk5c6"]
[ext_resource type="PackedScene" uid="uid://daongao5bnwr" path="res://transition/transition.tscn" id="6_aogxa"]

[sub_resource type="Animation" id="Animation_s1o6w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../BlurryFeira:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pp1m0"]
resource_name = "new_animation"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../BlurryFeira:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kk6rm"]
_data = {
"RESET": SubResource("Animation_s1o6w"),
"new_animation": SubResource("Animation_pp1m0")
}

[sub_resource type="Animation" id="Animation_3d7xr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wizard:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Wizard:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(305, 1500)]
}

[sub_resource type="Animation" id="Animation_qsfes"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wizard:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Wizard:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(305, 1100), Vector2(305, 400)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qapu8"]
_data = {
"RESET": SubResource("Animation_3d7xr"),
"new_animation": SubResource("Animation_qsfes")
}

[node name="intro_to_balança" type="Node2D"]
script = ExtResource("1_v3cna")

[node name="FeiraNotBlurry" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_8gx7a")

[node name="BlurryFeira" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_vqf2s")

[node name="Wizard" type="Sprite2D" parent="."]
visible = false
position = Vector2(305, 1500)
scale = Vector2(0.9, 0.9)
texture = ExtResource("4_qpbvx")

[node name="feira_som" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_sk5c6")

[node name="Blurry" type="AnimationPlayer" parent="."]
root_node = NodePath("../Wizard")
libraries = {
"": SubResource("AnimationLibrary_kk6rm")
}

[node name="WizardAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qapu8")
}

[node name="SceneTransitionAnimation" parent="." instance=ExtResource("6_aogxa")]
